...
        }
        // Do any additional setup after loading the view.
    }


    private func configureSubviews() {
        self.title = "测试项目"
        view.addSubview(tableView)
        tableView.snp.makeConstraints { (make) in
            make.edges.equalToSuperview()
        }
        let item = UIBarButtonItem(image: UIImage(named: "history-list"), style: .done, target: nil, action: nil)
        item.rx.tap.do(onNext:{ [weak self] () in
...
