...
            self.receiveMsg(notific: notific)
        }).disposed(by: rx.disposeBag)
        // Do any additional setup after loading the view.
    }
    
    private func setupSubviews() {
        self.title = "历史记录"
        
        let item = UIBarButtonItem(image: UIImage(named: "back-icon"), style: .done, target: nil, action: nil)
        item.rx.tap.do(onNext:{ [weak self] () in
            self?.navigationController?.popViewController(animated: true)
        }).subscribe().disposed(by: rx.disposeBag)
        self.navigationItem.leftBarButtonItem = item
...
